Create the Library app

--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
+@font-face {
+  font-family: "Norse Bold";
+  src: url("assets/fonts/Norse-Bold.otf");
+}
+
 :root {
-  --spacing-1: 12px;
-  --spacing-2: 24px;
-  --spacing-3: 48px;
+  --spacing-1: 6px;
+  --spacing-2: 12px;
+  --spacing-3: 24px;
+  --spacing-4: 48px;
 
   --card-surface: white;
   --on-card: black;
-  --card-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.1);
+  --shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.1);
+  --card-shadow: 0 20px 20px -10px rgba(0, 0, 0, 0.2);
   --dialog-backgrop: rgba(0, 0, 0, 0.1);
 
   --header-surface: white;
@@ -32,7 +39,11 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: max-content 1fr;
 
-  background-color: var(--body-surface);
+  background-color: #848de5;
+  background-image: url("assets/images/book-bg.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
 
   &:has(dialog[open]) {
     overflow: hidden;
@@ -45,9 +56,9 @@ header {
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding: var(--spacing-2);
+  padding: var(--spacing-4);
   background-color: var(--header-surface);
-  box-shadow: var(--card-shadow);
+  box-shadow: var(--shadow);
 }
 
 h1,
@@ -55,33 +66,143 @@ h2 {
   font-family: "Fairplay Display", serif;
 }
 
+h1 {
+  font-family: "Norse Bold", serif;
+  font-size: 4rem;
+  font-weight: bold;
+}
+
 main {
+  flex: 1;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 300px);
+  grid-template-columns: repeat(auto-fit, 500px);
   grid-auto-rows: max-content;
   justify-content: center;
-  padding: var(--spacing-2);
+  padding: var(--spacing-4);
+  gap: var(--spacing-4);
+}
+
+.empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: var(--spacing-2);
+
+  p {
+    color: white;
+    text-align: center;
+    font-size: 1.5em;
+    margin-top: 3em;
+    font-weight: bold;
+  }
+
+  button {
+    background-color: white;
+    border: 1px solid lightgray;
+    border-radius: var(--spacing-3);
+    outline: none;
+    padding: var(--spacing-1) var(--spacing-2);
+    cursor: pointer;
+    transition: background-color 0.1s, border-color 0.1s;
+    font-size: 1em;
+
+    &:hover,
+    &:active {
+      background-color: hsl(0, 0%, 95%);
+    }
+
+    &:focus {
+      border-color: black;
+    }
+  }
 }
 
 .card {
   background-color: white;
-  padding: var(--spacing-1);
-  border-radius: var(--spacing-1);
+  padding: var(--spacing-3);
+  padding-bottom: calc(var(--spacing-3) + var(--spacing-2));
+  border-radius: var(--spacing-2);
   box-shadow: var(--card-shadow);
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-1);
+  gap: var(--spacing-2);
   align-items: start;
+  position: relative;
 }
 
-.book {
+.tags {
+  display: flex;
+  gap: var(--spacing-3);
+  position: absolute;
+  bottom: 0;
+  left: var(--spacing-3);
+  right: var(--spacing-3);
+  transform: translateY(30%);
+}
+
+.tag {
+  background-color: white;
+  border: 1px solid lightgray;
+  padding: 4px 8px;
+  font-size: 1em;
+  border-radius: var(--spacing-2);
+  transition: background-color 0.1s, border-color 0.1s;
+}
+
+.read-tag {
+  cursor: pointer;
+
+  &:has(.read:checked) {
+    border-color: rgb(132, 207, 97);
+    background-color: rgb(233, 255, 223);
+  }
+
+  &:has(.read:hover),
+  &:has(.read:active) {
+    background-color: rgb(245, 245, 245);
+
+    &:has(.read:checked) {
+      background-color: rgb(219, 255, 202);
+    }
+  }
+
+  &:has(.read:focus) {
+    border-color: black;
+  }
+}
+
+.read:focus {
+  outline: none;
+}
+
+.remove-btn {
+  color: red;
+  background-color: rgb(255, 243, 243);
+  border-color: rgb(248, 153, 153);
+  cursor: pointer;
+  outline: none;
+  margin-left: auto;
+
+  &:hover,
+  &:active {
+    background-color: rgb(252, 230, 230);
+  }
+
+  &:focus {
+    border-color: black;
+  }
 }
 
 form {
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-1);
+  gap: var(--spacing-2);
+
+  label:has(input[type="text"]),
+  label:has(input[type="number"]) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 dialog {
@@ -109,14 +230,14 @@ dialog {
   position: absolute;
   inset: 0;
   background-color: var(--dialog-backgrop);
-  backdrop-filter: blur(3px);
+  backdrop-filter: blur(1px);
   z-index: -1;
 }
 
 #add-book-btn {
   position: fixed;
-  bottom: var(--spacing-3);
-  right: var(--spacing-3);
+  bottom: calc(var(--spacing-4) + var(--spacing-3));
+  right: var(--spacing-4);
   width: 5rem;
   height: 5rem;
   border-radius: 50%;
@@ -129,15 +250,25 @@ dialog {
   justify-content: center;
   align-items: center;
 
-  background-color: var(--button-surface);
-  color: var(--on-button);
+  background-color: white;
+  color: black;
+  box-shadow: var(--shadow);
+
+  transition: background-color 0.1s;
 
   &:hover,
   &:active {
-    background-color: var(--button-active);
+    background-color: hsl(0, 0%, 95%);
   }
 
   &:focus {
     outline: 2px solid black;
   }
+}
+
+footer {
+  background-color: white;
+  padding: var(--spacing-2);
+  font-size: 0.9em;
+  text-align: center;
 }
